feat: refactor attendance logging and country management services; add utility classes for string and transaction handling